KB-13525 : fix code based on comments and test cases